[package]
name = "cln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
home = "0.5.9"
rayon = "1.8.1"
tempdir = "0.3.7"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
