[package]
name = "cln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
rayon = "1.10"
tempfile = "3.10"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dev-dependencies]
assert_cmd = "2.0"
