[package]
name = "cln"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
home = "0.5"
rayon = "1.10"
tempfile = "3.10"
thiserror = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

