[package]
name = "cln"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1.1"
async-trait = "0.1.81"
env_logger = "0.11.3"
home = "0.5"
log = "0.4.22"
rayon = "1.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["process", "fs", "macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

