[package]
name = "cln"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
home = "0.5"
log = "0.4"
rayon = "1.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["process", "fs", "macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

